--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,7 +95,7 @@ jobs:
   
   updater:
     runs-on: ubuntu-latest
-    needs: release-chatgpt
+    needs: build-tauri
 
     steps:
       - uses: actions/checkout@v3
