--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,43 +3,45 @@ name: Release CI
 
 on:
   push:
+    branches:
+      - master
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
-  create-release:
-    permissions:
-      contents: write
-    runs-on: ubuntu-latest
-    outputs:
-      release_id: ${{ steps.create-release.outputs.result }}
+  # create-release:
+  #   permissions:
+  #     contents: write
+  #   runs-on: ubuntu-latest
+  #   outputs:
+  #     release_id: ${{ steps.create-release.outputs.result }}
 
-    steps:
-      - uses: actions/checkout@v3
-      - name: setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - name: get version
-        run: echo "PACKAGE_VERSION=${{ github.ref }}" >> $GITHUB_ENV
-      - name: create release
-        id: create-release
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const { data } = await github.rest.repos.createRelease({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              tag_name: `${process.env.PACKAGE_VERSION}`,
-              name: `Desktop App ${process.env.PACKAGE_VERSION}`,
-              body: 'Take a look at the assets to download and install this app.',
-              draft: true,
-              prerelease: false
-            })
-            return data.id
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: setup node
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 18
+  #     - name: get version
+  #       run: echo "PACKAGE_VERSION=${{ github.ref }}" >> $GITHUB_ENV
+  #     - name: create release
+  #       id: create-release
+  #       uses: actions/github-script@v6
+  #       with:
+  #         script: |
+  #           const { data } = await github.rest.repos.createRelease({
+  #             owner: context.repo.owner,
+  #             repo: context.repo.repo,
+  #             tag_name: `${process.env.PACKAGE_VERSION}`,
+  #             name: `Desktop App ${{ github.ref }}`,
+  #             body: 'Take a look at the assets to download and install this app.',
+  #             draft: true,
+  #             prerelease: false
+  #           })
+  #           return data.id
 
   build-tauri:
-    needs: create-release
+    # needs: create-release
     permissions:
       contents: write
     strategy:
@@ -75,7 +77,8 @@ jobs:
     permissions:
       contents: write
     runs-on: ubuntu-latest
-    needs: [create-release, build-tauri]
+    # needs: [create-release, build-tauri]
+    needs: [build-tauri]
 
     steps:
       - name: publish release
@@ -83,6 +86,7 @@ jobs:
         uses: actions/github-script@v6
         env:
           release_id: ${{ needs.create-release.outputs.release_id }}
+          TAURI_PRIVATE_KEY: ${{secrets.TAURI_PRIVATE_KEY }}
         with:
           script: |
             github.rest.repos.updateRelease({
