--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,103 +3,32 @@ name: Release CI
 
 on:
   push:
-    branches:
-      - master
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
-  # create-release:
-  #   permissions:
-  #     contents: write
-  #   runs-on: ubuntu-latest
-  #   outputs:
-  #     release_id: ${{ steps.create-release.outputs.result }}
-
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: setup node
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: 18
-  #     - name: get version
-  #       run: echo "PACKAGE_VERSION=${{ github.ref }}" >> $GITHUB_ENV
-  #     - name: create release
-  #       id: create-release
-  #       uses: actions/github-script@v6
-  #       with:
-  #         script: |
-  #           const { data } = await github.rest.repos.createRelease({
-  #             owner: context.repo.owner,
-  #             repo: context.repo.repo,
-  #             tag_name: `${process.env.PACKAGE_VERSION}`,
-  #             name: `Desktop App ${{ github.ref }}`,
-  #             body: 'Take a look at the assets to download and install this app.',
-  #             draft: true,
-  #             prerelease: false
-  #           })
-  #           return data.id
-
-  build-tauri:
-    # needs: create-release
-    permissions:
-      contents: write
+  build-chatgpt:
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        platform: [macos-latest, ubuntu-latest, windows-latest]
-
-    runs-on: ${{ matrix.platform }}
-    steps:
-      - uses: actions/checkout@v3
-      - name: setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - name: install Rust stable
-        uses: dtolnay/rust-toolchain@stable
-      - name: install dependencies (ubuntu only)
-        if: matrix.platform == 'ubuntu-latest'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
-      - name: install frontend dependencies
-        run: yarn install # change this to npm or pnpm depending on which one you use
-      - uses: tauri-apps/tauri-action@v0.3
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_SECRET_TOKEN }}
-          TAURI_PRIVATE_KEY: ${{secrets.TAURI_PRIVATE_KEY }}
-          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
-        with:
-          releaseId: ${{ needs.create-release.outputs.release_id }}
-
-  publish-release:
-    permissions:
-      contents: write
-    runs-on: ubuntu-latest
-    # needs: [create-release, build-tauri]
-    needs: [build-tauri]
-
-    steps:
-      - name: publish release
-        id: publish-release
-        uses: actions/github-script@v6
-        env:
-          release_id: ${{ needs.create-release.outputs.release_id }}
-          TAURI_PRIVATE_KEY: ${{secrets.TAURI_PRIVATE_KEY }}
-        with:
-          script: |
-            github.rest.repos.updateRelease({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              release_id: process.env.release_id,
-              draft: false,
-              prerelease: false
-            })
-  
-  updater:
-    runs-on: ubuntu-latest
-    needs: build-tauri
+        include:
+          - build: linux
+            os: ubuntu-latest
+            arch: x86_64
+            target: x86_64-unknown-linux-gnu
+          - build: macos
+            os: macos-latest
+            arch: x86_64
+            target: x86_64-apple-darwin
+          - buid: macos
+            os: macos-latest
+            arch: aarch64
+            target: aarch64-apple-darwin
+          - build: windows
+            os: windows-latest
+            arch: x86_64
+            target: x86_64-pc-windows-msvc
 
     steps:
       - uses: actions/checkout@v3
@@ -118,6 +47,78 @@ jobs:
           cache: pnpm
       - run: pnpm install --frozen-lockfile
 
+      - name: 'Setup Rust'
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.target }}
+      - uses: Swatinem/rust-cache@v2
+        with:
+          key: ${{ matrix.target }}
+
+      - name: Install xattr (macos only)
+        if: matrix.os == 'macos-latest'
+        run: pip install xattr
+
+      - name: Install dependencies (ubuntu only)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libayatana-appindicator3-dev librsvg2-dev patchelf
+
+      - name: Build FE
+        run: pnpm build:fe
+
+      - name: Install rust target
+        run: rustup target add ${{ matrix.target }}
+
+      - name: fix tray icon
+        if: matrix.os != 'macos-latest'
+        run: |
+          pnpm fix:tray
+
+      - run: pnpm build --target ${{ matrix.target }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
+          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
+
+      - uses: actions/upload-artifact@v3
+        if: matrix.os == 'ubuntu-latest'
+        with:
+          name: artifacts-${{ matrix.arch }}
+          path: |
+            ./target/${{ matrix.target }}/release/bundle/appimage/**.AppImage.*
+            ./target/${{ matrix.target }}/release/bundle/deb/**.deb
+
+      - uses: actions/upload-artifact@v3
+        if: matrix.os == 'macos-latest'
+        with:
+          name: artifacts-${{ matrix.arch }}
+          path: |
+            ./target/${{ matrix.target }}/release/bundle/dmg/**.dmg
+            ./target/${{ matrix.target }}/release/bundle/macos/**.app.*
+
+      - uses: actions/upload-artifact@v3
+        if: matrix.os == 'windows-latest'
+        with:
+          name: artifacts-${{ matrix.arch }}
+          path: |
+            ./target/${{ matrix.target }}/release/bundle/msi/**
+
+  release-chatgpt:
+    needs: build-chatgpt
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Install xattr
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xattr
+
+      - name: Query version number
+        run: echo "version=${GITHUB_REF:11}" >> $GITHUB_ENV
+
       - name: Download x86_64 artifacts
         uses: actions/download-artifact@v3
         with:
@@ -133,14 +134,43 @@ jobs:
       - name: test
         run: |
           ls ./artifacts/**/*
+      - name: Create Release
+        uses: softprops/action-gh-release@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+        with:
+          tag_name: v${{ env.version }}
+          name: ChatGPT v${{ env.version }}
+          body: See the assets to download this version and install.
+          prerelease: false
+          generate_release_notes: false
+          files: ./artifacts/**/*
 
+  updater:
+    runs-on: ubuntu-latest
+    needs: release-chatgpt
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: pnpm/action-setup@v2
+        name: Install pnpm
+        id: pnpm-install
+        with:
+          version: 7
+          run_install: false
+
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: pnpm
+      - run: pnpm install --frozen-lockfile
 
       - name: Updater JSON
         run: pnpm updater --token=${{ secrets.MY_GITHUB_TOKEN }}
-
-
-
-
+      - name: test2
+        run: ls
       - name: Deploy install.json
         uses: peaceiris/actions-gh-pages@v3
         with:
@@ -150,3 +180,14 @@ jobs:
 
       - name: Query version number
         run: echo "version=${GITHUB_REF:11}" >> $GITHUB_ENV
+
+  # publish-winget:
+  #   # Action can only be run on windows
+  #   runs-on: windows-latest
+  #   needs: [build-chatgpt, release-chatgpt]
+  #   steps:
+  #     - uses: vedantmgoyal2009/winget-releaser@v1
+  #       with:
+  #         identifier: lencx.ChatGPT
+  #         token: ${{ secrets.WINGET_TOKEN }}
+  #         version: ${{ github.event.release.tag_name }}
