--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,8 @@ name: Release CI
 
 on:
   push:
+    branches:
+      - master
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
@@ -117,7 +119,7 @@ jobs:
           sudo apt-get install -y xattr
 
       - name: Query version number
-        run: echo "version=${GITHUB_REF:11}" >> $GITHUB_ENV
+        run: echo "PACKAGE_VERSION=$(node -p "require('./src-tauri.conf.json')package.version")" >> $GITHUB_ENV
 
       - name: Download x86_64 artifacts
         uses: actions/download-artifact@v3
@@ -179,7 +181,7 @@ jobs:
           # force_orphan: true
 
       - name: Query version number
-        run: echo "version=${GITHUB_REF:11}" >> $GITHUB_ENV
+        run: echo "PACKAGE_VERSION=$(node -p "require('./src-tauri.conf.json')package.version")" >> $GITHUB_ENV
 
   # publish-winget:
   #   # Action can only be run on windows
