--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -141,8 +141,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
         with:
-          tag_name: v${{ env.version }}
-          name: ChatGPT v${{ env.version }}
+          tag_name: v${{ env.PACKAGE_VERSION }}
+          name: ChatGPT v${{ env.PACKAGE_VERSION }}
           body: See the assets to download this version and install.
           prerelease: false
           generate_release_notes: false
