--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -141,7 +141,9 @@ jobs:
         uses: softprops/action-gh-release@master
         env:
           GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+          PACKAGE_VERSION: ${{PACKAGE_VERSION}}
         with:
+          token: ${{ secrets.MY_GITHUB_TOKEN }}
           tag_name: v${{ env.PACKAGE_VERSION }}
           name: ChatGPT v${{ env.PACKAGE_VERSION }}
           body: See the assets to download this version and install.
