--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -137,18 +137,26 @@ jobs:
         run: |
           ls ./artifacts/**/*
           ls $pwd
-      - name: Create Release
-        uses: softprops/action-gh-release@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+          
+
+
+      - name: get version
+        run: echo "PACKAGE_VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
+      - name: create release
+        id: create-release
+        uses: actions/github-script@v6
         with:
-          token: ${{ secrets.MY_GITHUB_TOKEN }}
-          tag_name: v${{ env.PACKAGE_VERSION }}
-          name: ChatGPT v${{ env.PACKAGE_VERSION }}
-          body: See the assets to download this version and install.
-          prerelease: false
-          generate_release_notes: false
-          files: ./artifacts/**/*
+          script: |
+            const { data } = await github.rest.repos.createRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag_name: `app-v${process.env.PACKAGE_VERSION}`,
+              name: `Desktop App v${process.env.PACKAGE_VERSION}`,
+              body: 'Take a look at the assets to download and install this app.',
+              draft: true,
+              prerelease: false
+            })
+            return data.id
 
   updater:
     runs-on: ubuntu-latest
