--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -138,17 +138,17 @@ jobs:
           ls ./artifacts/**/*
           ls $pwd
           cat install.json||echo 0
-          ehco "========="
+          echo "========="
           echo $version
-          ehco "=====msg===="
+          echo "=====msg===="
           echo ${{ github.event.head_commit.message }}
-          ehco "========="
+          echo "========="
           cat "artifacts/x86_64/ChatGPT_${{ env.version }}_x64_en-US.msi.zip.sig" || echo 0
-          ehco "========="
-          ehco "========="
+          echo "========="
+          echo "========="
           cat "artifacts/x86_64/ChatGPT_${version}_x64_en-US.msi.zip.sig" || echo 0
-          ehco "========="
-          ehco "========="
+          echo "========="
+          echo "========="
           
       - name: Rename artifacts
         run: |
